Replaced normal navigation with a new fixed component on mobile.

--- a/static/styles.css
+++ b/static/styles.css
@@ -397,7 +397,7 @@ footer {
   overflow: hidden;
   background-color: var(--body-bg);
   position: fixed;
-  bottom: 0;
+  top: 0;
   width: 100%;
   padding: 15px 20px;
   z-index: 1;
@@ -474,12 +474,12 @@ footer {
     font-size: 1.2rem;
   }
 
-  /* .first-row-container-header {
+  .first-row-container-header {
     display: none;
-  } */
+  }
 
   .new-home-container {
-    padding: 0px 20px;
+    padding: 30px 20px;
   }
 
   #navbar-mobile {
